examples/policies/l3/host/host-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
description: "Allow ports for kube-dns, kube-api, Cilium, and SSH, as well as queries to Google's DNS on UDP/53 only"
metadata:
  name: "allow-google-dns-on-udp-53-only"
spec:
  nodeSelector:
    matchLabels:
      {}
  ingress:
  - toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
      - port: "22"
        protocol: TCP
  egress:
  - toPorts:
    - ports:
      - port: "4240"
        protocol: TCP
      - port: "8080"
        protocol: TCP
  - toCIDR:
    - "8.8.0.0/16"
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
